Fixed scrollbar

--- a/css/email.css
+++ b/css/email.css
@@ -80,7 +80,7 @@ body {
 
 #top-bar-spacer {
     display: inline-block; 
-    width: 395px;
+    width: 380px;
 }
 
 #navBtns {
